<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PositionFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/x_position_label"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/x_position_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosXMinusTen"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/minus_ten_button"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosXMinusOne"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/minus_one_button"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosXPlusOne"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/plus_one_button"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosXPlusTen"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/plus_ten_button"
                app:cornerRadius="5dp" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/y_position_label"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/y_position_hint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosYMinusTen"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/minus_ten_button"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosYMinusOne"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/minus_one_button"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosYPlusOne"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/plus_one_button"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosYPlusTen"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/plus_ten_button"
                app:cornerRadius="5dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>