<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/stroke_width_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.slider.Slider
                android:id="@+id/seekBarStrokeWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="9"
                android:valueFrom="1"
                android:valueTo="20" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/radius_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/seekBarRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:valueFrom="1"
                    android:valueTo="100"
                    android:min="1"
                    android:progress="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:id="@+id/btnRemainingColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_remaining_battery_color_button" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:id="@+id/btnNotAvailableColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_no_battery_color_button" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:id="@+id/btnBackgroundColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_background_color_button" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>